# spike-streamsync-sqlexplorer

./: README.md  docker-compose.yml  pyproject.toml
alfred/: run.py
data/db/: README.md
data/pgadmin/: servers.json
src/app/: main.py  ui.json
