[tool.poetry]
name = "spike-streamsync-sqlexplorer"
description = "explore a sql database with streamsync"
authors = ["Fabien Arcellier <fabien.arcellier@gmail.com>"]
license = "MIT"
version = "1.0.0"
readme = "README.md"
packages = [{include = "app", from = "src"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Environment :: Console"
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
streamsync = "^0.4.0"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
pandas = "^2.2.2"
pyarrow = "^15.0.2"



[tool.poetry.group.dev.dependencies]
alfred-cli = "^2.1.1"
mypy = "^1.4.1"
pytest = "^7.4.0"
pandas-stubs = "^2.2.1.240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
